trying another whitespace fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,10 @@
 
 body {
   overflow-y: scroll !important;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
     @apply text-white overflow-x-hidden overscroll-y-contain
 }
 
